Fix backdrop issue and dashboard bleed

--- a/src/Components/atoms/Backdrop/Backdrop.scss
+++ b/src/Components/atoms/Backdrop/Backdrop.scss
@@ -7,14 +7,19 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
   background: rgba(0, 0, 0, 0.619);
 
+  &__void {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+  }
+
   &__close {
-    position: absolute;
-    top: 50px;
-    right: 10px;
+    margin: 10px;
 
     & path {
       stroke: colors.$grey-1;
