--- a/src/Components/molecules/TrackRow/TrackRow.scss
+++ b/src/Components/molecules/TrackRow/TrackRow.scss
@@ -12,9 +12,9 @@
   cursor: pointer;
 
   &:hover {
-    background-color: colors.$row-hover;
+    background-color: colors.$greyblack;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 0px 5px 5px 0px;
+    // border-radius: 0px 5px 5px 0px;
   }
 
   &__album {
