--- a/src/Components/molecules/WelcomeHeader/WelcomeHeader.scss
+++ b/src/Components/molecules/WelcomeHeader/WelcomeHeader.scss
@@ -6,7 +6,6 @@
   flex-direction: column;
   align-items: center;
 
-  width: 100%;
   height: 130px;
   padding-bottom: 20px;
   padding-top: 10px;
