--- a/src/Pages/dashboard/Dashboard.scss
+++ b/src/Pages/dashboard/Dashboard.scss
@@ -3,8 +3,8 @@
   margin: 15px;
   overflow-y: scroll;
 
-  &__button {
-    display: flex;
-    justify-content: center;
-  }
+  // &__button {
+  //   display: flex;
+  //   justify-content: center;
+  // }
 }
